// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Event DOM rendering renders correctly with default props 1`] = `
<div
  className="general generalDesktop"
>
  <div
    className="header"
    onClick={[Function]}
  >
    <div
      className="start"
    >
      Translated today 09 Tra 09:00
       
    </div>
  </div>
  <div
    className="teams"
    onClick={[Function]}
  >
    <div
      className="team home"
    >
      <span
        className="name"
      >
        Sweden
      </span>
    </div>
    <div
      className="team away"
    >
      <span
        className="name"
      >
        Poland
      </span>
    </div>
  </div>
  <div
    className="outcomes"
  />
</div>
`;

exports[`Event DOM rendering renders correctly with event starting later than tomorrow 1`] = `
<div
  className="general generalDesktop"
>
  <div
    className="header"
    onClick={[Function]}
  >
    <div
      className="start"
    >
       11 Tra 09:00
       
    </div>
  </div>
  <div
    className="teams"
    onClick={[Function]}
  >
    <div
      className="team home"
    >
      <span
        className="name"
      >
        Sweden
      </span>
    </div>
    <div
      className="team away"
    >
      <span
        className="name"
      >
        Poland
      </span>
    </div>
  </div>
  <div
    className="outcomes"
  />
</div>
`;

exports[`Event DOM rendering renders correctly with event starting today 1`] = `
<div
  className="general generalDesktop"
>
  <div
    className="header"
    onClick={[Function]}
  >
    <div
      className="start"
    >
      Translated today 09 Tra 09:00
       
    </div>
  </div>
  <div
    className="teams"
    onClick={[Function]}
  >
    <div
      className="team home"
    >
      <span
        className="name"
      >
        Sweden
      </span>
    </div>
    <div
      className="team away"
    >
      <span
        className="name"
      >
        Poland
      </span>
    </div>
  </div>
  <div
    className="outcomes"
  />
</div>
`;

exports[`Event DOM rendering renders correctly with event starting tomorrow 1`] = `
<div
  className="general generalDesktop"
>
  <div
    className="header"
    onClick={[Function]}
  >
    <div
      className="start"
    >
      Translated tomorrow 10 Tra 09:00
       
    </div>
  </div>
  <div
    className="teams"
    onClick={[Function]}
  >
    <div
      className="team home"
    >
      <span
        className="name"
      >
        Sweden
      </span>
    </div>
    <div
      className="team away"
    >
      <span
        className="name"
      >
        Poland
      </span>
    </div>
  </div>
  <div
    className="outcomes"
  />
</div>
`;

exports[`Event DOM rendering renders correctly with live data 1`] = `
<div
  className="general generalDesktop"
>
  <div
    className="header"
    onClick={[Function]}
  >
    <div
      className="start"
    >
       11 Tra 09:00
       
    </div>
  </div>
  <div
    className="teams"
    onClick={[Function]}
  >
    <div
      className="team home"
    >
      <span
        className="name"
      >
        Sweden
      </span>
    </div>
    <div
      className="score"
    >
      1
      <small>
        -
      </small>
      5
    </div>
    <div
      className="team away"
    >
      <span
        className="name"
      >
        Poland
      </span>
    </div>
  </div>
  <div
    className="outcomes"
  >
    <OutcomeButtonUI
      event={
        Object {
          "id": 100,
        }
      }
      label={
        <span
          className="liveLabel"
        >
          <em>
            Translated Live
          </em>
          Translated Right Now
        </span>
      }
      odds={null}
      onClick={[Function]}
      outlineStyle={true}
      selected={false}
      suspended={false}
    />
  </div>
</div>
`;

exports[`Event DOM rendering renders correctly with outcomes 1`] = `
<div
  className="general generalDesktop"
>
  <div
    className="header"
    onClick={[Function]}
  >
    <div
      className="start"
    >
       11 Tra 09:00
       
    </div>
  </div>
  <div
    className="teams"
    onClick={[Function]}
  >
    <div
      className="team home"
    >
      <span
        className="name"
      >
        Sweden
      </span>
    </div>
    <div
      className="team away"
    >
      <span
        className="name"
      >
        Poland
      </span>
    </div>
  </div>
  <div
    className="outcomes"
  >
    <OutcomeButton
      betslipDefaultStake={null}
      betslipTrackingName={null}
      betslipUpdateMode={null}
      event={
        Object {
          "id": 100,
        }
      }
      label={true}
      onSelection={null}
      outcome={
        Object {
          "id": 200,
        }
      }
      outlineStyle={true}
      updateOdds={false}
    />
    <OutcomeButton
      betslipDefaultStake={null}
      betslipTrackingName={null}
      betslipUpdateMode={null}
      event={
        Object {
          "id": 100,
        }
      }
      label={true}
      onSelection={null}
      outcome={
        Object {
          "id": 300,
        }
      }
      outlineStyle={true}
      updateOdds={false}
    />
  </div>
</div>
`;
